# structblas

./: .gitignore  CMakeLists.txt  README.md  ford.md  index.html  search.html
docs/ford_output/: index.html  search.html
docs/ford_output/interface/: sb_gemv.html
docs/ford_output/lists/: files.html  modules.html  procedures.html  programs.html  types.html
docs/ford_output/module/: circulant_mod.html  dcirculant_mod.html  structblas_const_mod.html  structblas_mod.html  structblas_util_mod.html
docs/ford_output/page/: circulant.html  index.html
docs/ford_output/proc/: d_circ_gemv.html  libraryinfo.html  sb_toupper.html  test_build_1.html  test_build_2.html  test_dgemv.html  test_dgemv_2.html  test_setc_1.html  test_setc_2.html  test_setc_3.html  test_setlambda_1.html  test_tomat.html
docs/ford_output/program/: circulant.html  fftwinterface.html  helloworld.html  main.html
docs/ford_output/sourcefile/: circulant.f90.html  circulant_mod.f90.html  dcirculant_mod.f90.html  fftwinterface.f90.html  helloworld.f90.html  main.f90.html  structblas_const_mod.f90.html  structblas_mod.f90.html  structblas_util_mod.f90.html
docs/ford_output/src/: circulant.f90  circulant_mod.f90  dcirculant_mod.f90  fftwinterface.f90  structblas_const_mod.f90  structblas_util_mod.f90
docs/ford_output/tipuesearch/: tipuesearch_content.js
docs/ford_output/type/: dcirculant.html
docs/pages/: circulant.md  index.md
interface/: sb_gemv.html
lists/: files.html  modules.html  procedures.html  types.html
module/: dcirculant_mod.html  structblas_mod.html
mtest/: circulant.m
page/: circulant.html  index.html
proc/: sb_toupper.html  test_build_2.html  test_dgemv.html  test_dgemv_1.html  test_setc_1.html  test_setc_2.html  test_setlambda_1.html
program/: circulant.html  helloworld.html
sourcefile/: circulant.f90.html  helloworld.f90.html  structblas_mod.f90.html  structblas_util_mod.f90.html
src/: circulant.f90  circulant_mod.f90  fftw_mod.f90  helloworld.f90  main.f90  structblas_mod.f90
tipuesearch/: tipuesearch_content.js
type/: dcirculant.html
